--- a/Day006Framework/Day006Framework/Framework/Framework.vcxproj
+++ b/Day006Framework/Day006Framework/Framework/Framework.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="inputhandler.h" />
     <ClInclude Include="logmanager.h" />
+    <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="sprite.h" />
     <ClInclude Include="texture.h" />
@@ -103,6 +104,7 @@
     <ClCompile Include="inputhandler.cpp" />
     <ClCompile Include="logmanager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="sprite.cpp" />
     <ClCompile Include="texture.cpp" />
